[package]
name = "imgui-sfml-support"
version = "0.1.2"
edition = "2021"
authors = ["truenotzero"]
description="A SFML backend for Rust's ImGui port"
repository="https://github.com/truenotzero/imgui-sfml-support"
license="MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imgui = "0.11.0"
imgui-opengl-renderer = "0.12.1"
sfml = "0.21.0"

